--- a/agenda/agenda.org
+++ b/agenda/agenda.org
@@ -6,9 +6,10 @@
 - [X] <2024-11-06 Wed> [[https://deepbluembedded.com/arduino-port-manipulation-registers-example/?utm_content=cmp-true][Port manipulation on Arduino uno]]
 - [ ] <2024-11-16 Sat> [[https://docs.arduino.cc/tutorials/uno-wifi-rev2/uno-wifi-r2-mqtt-device-to-device/][Arduino Uno with MQTT]]   
 - [X] <2024-11-06 Wed> [[https://electronoobs.com/eng_arduino_tut12.php][More on port manipulation]]
-- [ ] <2024-11-16 Sat> [[https://thingsboard.io/docs/samples/arduino/temperature/][Arduino temperature example with MQTT]] 
-* Embedded [1/1]
+- [ ] <2024-11-16 Sat> [[https://thingsboard.io/docs/samples/arduino/temperature/][Arduino temperature example with MQTT]]
+* Embedded [1/2]
 - [X] <2024-11-06 Wed> [[https://herndlbauer.com/blog/arduino-uno-bare-metal-programming/][Baremetal on arduino uno]]
+- [ ] <2024-11-16 Sat> [[https://docs.arduino.cc/learn/microcontrollers/analog-output/][Pulse Width Modulation]] 
 * Rust [1/2]
 - [X] <2024-11-06 Wed> [[https://blog.logrocket.com/complete-guide-running-rust-arduino/][Running rust on arduino]]
 * C++ (Wiring) [/]
