--- a/README.org
+++ b/README.org
@@ -6,11 +6,9 @@ This is the repositoty where I keep all of my relevant notes,code and references
 project is managed using emacs and org-mode.
 
 * Directories
-** Notes
-The notes directory contains copies of my org-roam notes related to this thesis.
-** Rust
+** [[file:rust/][Rust]]
 Implementations of relevant code in rust.
-** Wiring
+** [[file:wiring/][Wiring]]
 Implementations of relevant code in C++ with the Arduino framework using PlatformIO.
 ** [[file:agenda/agenda.org][Agenda]]
 Collection of references with relevant timestamps and org states (TODOs, etc).
