update(write/thesis/): more writing

--- a/write/thesis/main.tex
+++ b/write/thesis/main.tex
@@ -36,6 +36,13 @@ sorting=ynt
 ]{biblatex}
 \bibliography{/home/chris/Documents/Bibliography/references}
 
+% Math
+\usepackage{amsmath}
+\newcommand*\BitAnd{\mathbin{\&}}
+\newcommand*\BitOr{\mathbin{|}}
+\newcommand*\ShiftLeft{\ll}
+\newcommand*\ShiftRight{\gg}
+\newcommand*\BitNeg{\ensuremath{\mathord{\sim}}}
 
 \usepackage{subfiles} % Best loaded last in the preamble
 
