--- a/write/thesis/sections/introduction.tex
+++ b/write/thesis/sections/introduction.tex
@@ -96,12 +96,123 @@ API (Application Programming Interface), τα οποία χτίζονται το
 Αναφερόμαστε στα συστήματα που δεν χρησιμοποιούν παραδοσιακά OS  ως
 embedded systems διότι τα βρίσκουμε συχνά ενσωματωμένα σε μεγαλύτερες συσκευές.
 
+Συνήθως προγραμματίζουμε ένα embedded system στο κύριο μηχάνημα μας
+(host machine) το οποίο είναι λογικά διαφορετικής αρχιτεκτονικής. Αυτό
+σημαίνει ότι πρέπει να μετατρέψουμε τον πηγαίο κώδικα της high level
+γλώσσας που χρησιμοποιούμε στην αντίστοιχη γλώσσα που καταλαβαίνει ο
+εξωτερικός επεξεργαστής. Αυτή η διαδικασία λέγεται
+cross-compiling. Μάλιστα είναι απαραίτητο να δώσουμε στο πρόγραμμα τις
+απαραίτητες τοποθεσίες στην μνήμη στην οποία θα εκτελεί εντολές ή θα
+αποθηκεύει στατικά δεδομένα, αυτή είναι δουλειά του
+linker. Αναλυτικότερα ο πηγαίος κώδικας, μαζί
+με ότι βιβλιοθήκες χρησιμοποιούνται περνάνε από τον compiler και
+πρώτα προεπεξεργάζονται και ενώνονται σε μια δομή.
+Μεταφράζονται αργότερα στην assembly που καταλαβαίνει το target
+μηχάνημα και ο assembler τα μετασχηματίζει σε ένα ή περισσότερα
+Relocatable Object αρχεία, δηλαδή συλλογές από bytes που
+αντιπροσωπεύουν τον κώδικα στην target γλώσσα. Έπειτα τα object files
+περνάνε από τον linker ο οποίος ανάλογα με τις ρυθμίσεις του οργανώνει
+το αρχείο και προσθέτει απαραίτητα δεδομένα για να δημιουργήσει ένα
+εκτελέσιμο για το target μηχάνημα πρόγραμμα, για παράδειγμα ένα ELF32 \figref{fig:compilation_stages}.
+
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.4]{images/introduction/programming_embedded.png}
-\caption{Σύστημα κλειστού βρόχου.}
+\includegraphics[scale=0.4]{images/introduction/compilation_stages.png}
+\caption{Στάδια μεταγλώττισης.}
+ \label{fig:compilation_stages}
+\end{figure}
+
+\newpage
+
+Η πραγματικότητα είναι ότι πλέον, ειδικά για μικρά projects, η διαδικασία
+των σταδίων μεταγλώττισης είναι αυτοματοποιημένη και γίνονται όλα μέσο του
+οικοσυστήματος όπως θα δούμε αργότερα. Όμως εξακολουθεί να είναι ιδιαίτερα χρήσιμη η γνώση
+τους και απασχολεί πολύ τον κόσμο της πληροφορικής ακόμα και σήμερα, για λόγους βελτιστοποίησης 
+και debugging.
+
+Εφόσον έχουμε δημιουργήσει ένα εκτελέσιμο αρχείο πρέπει με κάποιο τρόπο να το στείλουμε στην συσκευή.
+Συνήθως χρησιμοποιούμε κάποιο σειριακό πρωτόκολλο, τύπου USB το οποίο εσωτερικά συνδέεται με κάποιου είδους
+μη πτητικής μνήμης για να το αποθηκεύσει \figref{fig:embedded_workflow}. Αυτό έχει ως αποτέλεσμα το πρόγραμμα να διατηρείτε ανεξαρτήτως
+αν αργότερα κάνουμε επανεκκίνηση ή τερματίσουμε την συσκευή.
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.4,angle = 90]{images/introduction/programming_embedded.png}
+\caption{Development workflow}
  \label{fig:embedded_workflow}
 \end{figure}
+
+\newpage
+
+Όταν ενεργοποιήσουμε την μηχανή τα απαραίτητα στοιχεία από την μη πτητική μνήμη
+αντιγράφονται στην προσωρινή και ο καταχωρητής program counter του επεξεργαστή
+δείχνει στην διεύθυνση μνήμης στην οποία βρίσκεται η πρώτη εντολή του πρώτου
+προγράμματος που θα τρέξει. Συνήθως αυτό είναι κάποιου είδους bootloader, αλλά
+στα ενσωματωμένα συστήματα δεν είναι πάντα αυτή η περίπτωση και τρέχει το firmware
+που έχουμε γράψει κατευθείαν. 
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.4,angle=90]{images/introduction/instruction_cycle.drawio.png}
+\caption{Κύκλος εντολών μηχανής}
+ \label{fig:instruction_cycle_workflow}
+\end{figure}
+
+Αξίζει να σημειωθεί ότι δεν είναι πάντα ξεκάθαρο το πως η μη πτητική μνήμη αντιγράφετε στην
+προσωρινή εξαρχώς, μπορεί οι μνήμες να έχουν ενσωματωμένο firmware και
+να επικοινωνούν με σύνδεση τύπου I2C ή UART ή πιο λογικό να είναι ο
+bootloader του επεξεργαστή σε μια ανεξάρτητη ROM (Read Only Memory)
+σταθερής διεύθυνσης και μεγέθους και να είναι αυτός υπεύθυνος για την
+επικοινωνία. Παράλληλα, υπάρχουν πολλοί καταχωρητές οι οποίοι διαχειρίζονται
+την κατάσταση (state) του επεξεργαστή και κατά συνέπεια ολόκληρου του συστήματος. Ο program counter
+αναφέρετε διότι διατηρείτε σε πρακτικά όλες τις αρχιτεκτονικές. 
+
+Είναι σημαντικό να γνωρίζουμε επίσης ότι μια εντολή δεν εκτελείτε
+κατευθείαν. Όπως αναπαριστά το παραπάνω διάγραμμα, πρώτα ο
+επεξεργαστής διαβάζει την εντολή από την μνήμη (fetch). Έπειτα την
+αποσπά για να την κατανοήσει (decode). Θυμόμαστε ότι έχουμε
+αποθηκεύσει το εκτελέσιμο αρχείο, δηλαδή αυτό που είναι κατανοητό στην
+μηχανή, σε δυαδική μορφή, όχι σε γραμματοσειρά που είναι κατανοητή
+στους ανθρώπους. Για παράδειγμα οι εντολές της αρχιτεκτονικής RISC-V
+32bit έχουν σταθερό μέγεθος και αναπαριστούν μια αριθμητική τιμή $x \in
+[0, 2^{31}] \subseteq \mathbb{N}_0$. Ο αριθμός αυτός στην δυαδική του μορφή, μπορεί να
+διαχωριστεί σε $n\in\mathbb{N}$ θραύσματα, συνήθως τα λέμε nibbles, μέσο bit operations και εξηγούν στον
+επεξεργαστή τι πρέπει να κάνει. Στην πολύ συχνή εντολή
+\verb|add t0, t1, t2|, στην οποία προσθέτουμε την τιμή του καταχωρητή
+$t1$ με την τιμή του καταχωρητή $t2$ και την αποθηκεύουμε στον t0, ένα
+unit του επεξεργαστή κάνει τις παρακάτω πράξεις για να την
+αποκωδικοποιήσει.
+
+\vspace{0.5cm}
+
+\begin{math}
+  Bits_{0-31} \text{ is stored in memory and then enters a unit capable of decoding RISC-V instructions:}  \newline
+  Bits_{0-31} = \verb|add t0, t1, t2| = 0x007302b3_{(16)} \newline
+  Bits_{0-6} = Bits_{0-31} \BitAnd 0x7F_{(16)} \rightarrow \text{opcode} \newline
+  Bits_{7-11} = (Bits_{0-31} \ShiftRight 7_{(10)}) \BitAnd 0x1F_{(16)} \rightarrow \text{destination register} \newline
+  Bits_{12-14} = (Bits_{0-31} \ShiftRight 12_{(10)}) \BitAnd 0x7_{(16)} \rightarrow \text{operation (addition)} \newline
+  Bits_{15-19} = (Bits_{0-31} \ShiftRight 15_{(10)}) \BitAnd 0x1F_{(16)} \rightarrow \text{source register 1} \newline
+  Bits_{20-24} = (Bits_{0-31} \ShiftRight 20_{(10)}) \BitAnd 0x1F_{(16)} \rightarrow \text{source register 2} \newline
+  Bits_{25-31} = (Bits_{0-31} \ShiftRight 25_{(10)}) \BitAnd 0x7F_{(16)} \rightarrow \text{addition variant} \newline
+\end{math}
+
+Η λογική αποκωδικοποίησης είναι ίδια σε πρακτικά όλες τις
+αρχιτεκτονικές όμως το μέγεθος μιας εντολής δεν είναι σε όλες
+σταθερό. Τέλος, παίρνουν μέρος οι αριθμητικές πράξεις ή το I/O με βάση
+τα αποτελέσματα του decoding (execute).
+
+Η καθυστέρηση που έρχεται ως επίπτωση των παραπάνω πράξεων μπορεί να
+φαίνεται στην αρχή σαν μεγάλη υπερφόρτωση του υπολογιστικού συστήματος
+και πράγματι για παλαιότερες αρχιτεκτονικές ήταν. Το λεγόμενο
+Instruction Cycle όμως (Fetch \rightarrow Decode \rightarrow Execute)
+που μόλις αναλύσαμε έχει οριστεί για έναν πολύ συγκεκριμένο
+λόγο. Ουσιαστικά ο επεξεργαστής εκμεταλλεύεται την καθυστέρηση που
+παίρνει μέρος υλοποιώντας μια δομή, για τους σκοπούς μας ένα
+pipeline. Κάθε φορά που αλλάζει το state μιας εντολής προχωράει
+στο pipeline και προσθέτετε μια καινούργια εντολή στην αρχικοποιημένη της
+κατάσταση. Αυτό δίνει την ψευδαίσθηση παραλληλισμού στο επίπεδο του επεξεργαστή
+και είναι ένας από τους πολλούς λόγους που σύγχρονα προγράμματα μπορούν να τρέχουν
+τόσο γρήγορα χωρίς απαραίτητα να τρέχουν πάνω σε ένα runtime.
 
 Η περίπτωση του ESP32C6 είναι ότι αν και είναι πανίσχυρος για μικροελεγκτής ανάλογα
 με το framework περιέχει μινιμαλιστικά, στην καλύτερη περίπτωση, abstractions.
